Fixed contrast errors on tags, login page, header

--- a/frontend/src/components/Header/style.scss
+++ b/frontend/src/components/Header/style.scss
@@ -44,7 +44,7 @@ header {
 
             a {
                 text-decoration: none;
-                color: rgb(108, 131, 137);
+                color: rgb(42, 76, 85);
                 font-weight: bold;
 
                 &.active {
