--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -2,7 +2,7 @@
 // Color palette (various shades of green)
 $color-a: rgb(41, 112, 114);
 $color-b: rgb(177, 217, 211);
-$color-c: rgb(108, 214, 189);
+$color-c: rgb(41, 143, 119);
 $color-d: rgb(33, 68, 68);
 $color-e: rgb(20, 95, 85);
 $color-f: rgb(19, 94, 104);
